[metadata]
name = bowdata.test.flask
author = Oliver Richardson
author_email = oliver@bow-data.com
description = flask app + API test fixtures
long_description = file:README.rst
classifiers =
        Environment :: Console
        Topic :: Scientific/Engineering :: Artificial Intelligence
        Topic :: Software Development :: Libraries :: Python Modules
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Operating System :: POSIX
        Operating System :: Microsoft :: Windows :: Windows 10
        License :: Other/Proprietary License
provides = bowdata.test.flask
; can't use this as we are setting requirements in setup.py which breaks the wheel
; requires-dist = setuptools

[options]
setup_requires =
    setuptools
package_dir =
    =src
packages = find_namespace:
namespace_packages =
    bowdata
    bowdata.test

;[options.entry_points]
;console_scripts =
;enter-command-name=modeule:function_name
;[options.extras_require]
;environments = azdopackage>=0.0.13
;pipelines = azdopackage>=0.0.25

[options.package_data]
* =  *.rst
     requirements.txt
     *.ini
     *.cfg

[options.packages.find]
where=src

[versioneer]
vcs = git
style = pep440
versionfile_source = src/bowdata/test/flask/_version.py
versionfile_build = bowdata/test/flask/_version.py
tag_prefix =
parentdir_prefix = bowdata.test.flask-

[flake8]
ignore = E501,E226,E121,E123,E126,E24,E704,D107
count = True
exclude =
	.git,
	.\.git,
	__pycache__,
	docs/source/conf.py,
	./docs/source/conf.py,
	build/*,
	.\build\lib\*,
	.\build\*,
	dist,
	docs/*,
	*.pyc,
	*.rst,
	*.md,
	*.png,
	.tox,
	examples,
	tests,
	versioneer.py,
	.venv/*,
	.tox/*
show_source = True
statistics = True
import-order-style = appnexus
application-import-names = bowdata.test.flask
application-package-names = bowdata
per-file-ignores =
	__init__.py: D104, F401, I202, I100, E402
